--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = tpm2-tss
-url = https://github.com/tpm2-software/tpm2-tss/archive/2.4.0/tpm2-tss-2.4.0.tar.gz
+url = https://github.com/tpm2-software/tpm2-tss/archive/2.4.1/tpm2-tss-2.4.1.tar.gz
 archives = 
 giturl = https://github.com/tpm2-software/tpm2-tss.git
 domain = 
@@ -39,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
