Source from dist tarball instead
At minimum, this fixes the value of `VERSION` to be substituted in the
distributed .pc files...

The project's build system bootstrap is meant to be run from the git
repo directly, not from a git archive snapshot from a tagged commit.

Signed-off-by: Patrick McCarty <patrick.mccarty@intel.com>

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = tpm2-tss
-url = https://github.com/tpm2-software/tpm2-tss/archive/3.2.0/tpm2-tss-3.2.0.tar.gz
+url = https://github.com/tpm2-software/tpm2-tss/releases/download/3.2.0/tpm2-tss-3.2.0.tar.gz
 archives = 
 giturl = https://github.com/tpm2-software/tpm2-tss.git
 domain = 
@@ -62,5 +62,5 @@ use_clang = false
 # configure build for lto
 use_lto = true
 # require package verification for build
-verify_required = false
+verify_required = true
 
