tpm2-tss: Autospec creation for version 3.2.0

--- a/options.conf
+++ b/options.conf
@@ -8,7 +8,7 @@ alias =
 
 [autospec]
 # build 32 bit libraries
-32bit = false
+32bit = true
 # allow package to build with test failures
 allow_test_failures = false
 # unset %build ld_as_needed variable
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
