tpm2-tss: Autospec creation for update from version 3.2.1 to version 4.0.0
Abdulmajeed (1):
      Fixing an issue when Null deref occures in Esys_TR_SetAuth when esys_handle == ESYS_TR_NONE

Andreas Fuchs (5):
      Update MAINTAINERS
      MU: Fix header style
      ESYS: Fix header style
      tss2-dlopen-esys: Add missing functions
      FAPI: Add http return code handling

Ben Brown (1):
      configure: conditionally check for user/group manipulation commands

Benjamin Bigler (1):
      ESYS: Updated to mbedTLS 3.0

Erik Bryan (1):
      Correct [out] param documentation

Erik Larsson (13):
      fapi: use correct userdata for cbauthnv
      tcti: link tcti-libtpms against tss2-mu not tss2-tctildr
      policy: use correct base RC for NULL callback
      fapi: use correct userdata for cbauthnv
      policy: check corrent callback for NULL for policy duplicate
      rc: add policy RC handling
      esys: fix documentation for ESYS_CRYPTO_GET_ECDH_POINT_FNP
      rc: add function to decode the bitfields in TSS2_RC
      rc: add format field to TSS2_RC_INFO and clear it when decoding
      rc: add function to get a human readable error message from TSS2_RC_INFO
      FAPI: use tmpfiles conf for UEFI and IMA event log permissions
      Revert "fapi: start systemd oneshot service"
      types: fix define for TPM2_HR_NV_AC

Imran Desai (1):
      tss2-esys/esys_tr.c: fix resource leaks

Jan Dahms (1):
      TCTI: Add generic platform independent SPI TCTI module

JerryDevis (5):
      tcti: Use heap instead of stack when tcti initialize
      tcti:Use heap instead of stack and allocate it as needed when tcti initialize
      tcti: Fix stack usage is too large when tcti initialize
      tcti:Use safe free instead of free.
      tcti:Add the handling of name or conf is NULL

Jonas Witschel (2):
      test: check return value of fread
      fapi: make ordering of search directories filesystem-independent

Juergen Repp (52):
      MAINTAINERS: Change e-mail address Juerge

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = tpm2-tss
-url = https://github.com/tpm2-software/tpm2-tss/releases/download/3.2.1/tpm2-tss-3.2.1.tar.gz
+url = https://github.com/tpm2-software/tpm2-tss/releases/download/4.0.0/tpm2-tss-4.0.0.tar.gz
 archives = 
 giturl = https://github.com/tpm2-software/tpm2-tss.git
 domain = 
@@ -27,6 +27,8 @@ conservative_flags = false
 dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
+# compile full (traditional) debug info
+full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
 # set flags to smallest -02 flags possible
